<resources>
    <string name="app_name">WeatherClothes_291024</string>

    <string name="weather_menu">Weather</string>
    <string name="places_menu">Places</string>

    <!--  Main Fragment  -->
    <string name="degrees_celsius">Degrees Celsius</string>
    <string name="degrees_fahrenheit">Degrees Fahrenheit</string>
    <string name="male_character">Male character</string>
    <string name="female_character">Female character</string>

    <!--  ViewPagerFragment  -->
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="your_location">Your location</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>

    <!--  Load Fragment  -->
    <string name="weather">weather</string>
    <string name="clothes">clothes</string>

    <!--  Permission Fragment  -->
    <string name="text_explanation_for_user">To provide personalized weather updates for your area, we need access to your location. You can grant permission now or manually select a location.</string>
    <string name="grant_permission_button">Grant permission</string>
    <string name="we_need_your_location">We Need Your Location</string>

    <!--  Places Fragment  -->
    <string name="not_places">You haven\'t added any\nlocations yet</string>
    <string name="add_a_place">Add a place</string>

    <!--  Search Fragment  -->
    <string name="searchHint">Search the place</string>

    <!--  Add City Location Screen  -->
    <string name="add_location">Add</string>
    <string name="added">Added</string>

    <!-- Error Screen -->
    <string name="connection_error">Connection Error</string>
    <string name="text_error_for_user">Something went wrong. We couldn\'t load the latest weather updates. Please check your internet connection and try again.</string>
    <string name="try_again">Try again</string>

</resources>